2016-03-12  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mel.el (mel-prompt-for-encoding): New function.
	(mime-encode-region, mime-decode-region)
	(mime-insert-encoded-file, mime-write-decoded-region): Use it.

2015-12-13  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* smtp.el (smtp-send-buffer, smtp-send-buffer-by-myself): Kill
	trace buffer after sending when smtp-debug is nil and network
	stream is disconnected.  Suggested by Herbert J. Skuhra
	<herbert@oslo.ath.cx>

2015-07-30  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* smtp.el (smtp-primitive-auth): Fix the case that server returns
	human readable string for AUTH command.

2015-05-23  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* smtp.el (smtp-make-fqdn): Show more informative message for
	invalid FQDN.
	Cf. https://github.com/wanderlust/wanderlust/issues/96

2015-05-02  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* eword-encode.el: Require poem.el for non-mule.

2015-04-30  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-parse.el (mime-default-ccl-lexical-analyzer)
	(mime-ccl-lexical-analyzer): Fix for CCL unusable environments.

	* std11.el (std11-default-ccl-lexical-analyzer)
	(std11-ccl-lexical-analyzer): Likeswise.

2015-04-27  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-parse.el (mime-default-ccl-lexical-analyzer): Fix wrong
	program is build on XEmacs.

	Cf. https://github.com/wanderlust/flim/commit/488a4d70fb4ae57bdd30dc75c2d75579894e28a2

	* std11.el (std11-default-ccl-lexical-analyzer): Likewise.

2015-03-10  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-parse.el (mime-default-ccl-lexical-analyzer): Fix the case
	input is terminated with space characters or non-closing comment.

2014-12-21  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* std11.el (std11-ignored-token-p): Simplified.

2014-12-16  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	CCL base lexical analyzers are available.  They are much faster.
	If you modify `std11-lexical-analyzer' or `mime-lexical-analyzer',
	you also need to modify `std11-ccl-lexical-analyzer' or