@@ -1,3 +1,9 @@
+2016-08-13  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
+
+	* eword-decode.el (eword-analyze-encoded-word): Quote decoded word
+	when it contains non-atom special chars and not quoted.
+	Cf. https://github.com/wanderlust/wanderlust/issues/126
+
 2016-03-12  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
 
 	* mel.el (mel-prompt-for-encoding): New function.
